FIX: aligned copyright and fixed mobile style

--- a/client/src/Footer/Footer.module.scss
+++ b/client/src/Footer/Footer.module.scss
@@ -14,3 +14,8 @@
   border-radius:5px;
   padding:7px;
 }
+@media (max-width: 31em) {
+  .footer{
+    height:auto;
+  }
+}
